[package]
name = "sdl"
version = "0.3.6"
authors = [
	"Brian Anderson <banderson@mozilla.com>",
	"Kang Seonghoon <public+rust@mearie.org>"
	"Daogang Tang <daogangtang@gmail.com>"
]

description = "SDL bindings"
homepage = "https://github.com/brson/rust-sdl"
repository = "https://github.com/brson/rust-sdl"
license = "MIT"

[dependencies]
num = "0.1.24"
libc = "0.1"
rand = "0.3"
